# nr-documents-app

./: setup.cfg
.github/workflows/: tests.yml
nr_documents_app/: __init__.py
nr_documents_app/theme/: webpack.py
nr_documents_app/theme/assets/semantic-ui/js/nr_documents_app/search/: index.js
