
[metadata]
name = nr-documents-app
version = attr: nr-documents-app.__version__
description = Application package for NR documents site
long_description = file: README.md
long_description_content_type = text/markdown
keywords = oarepo ui nr documents
license = MIT
author = Miroslav Bauer
author_email = bauer@cesnet.cz
platforms = any
url = https://github.com/Narodni-repozitar/nr-documents-app
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    Babel>=2.8
    Flask>=2.1.2
    importlib-metadata>=4.11.4
    invenio-assets>=1.2.7,<1.3.0
    #TODO: uncoment after release
    #oarepo-ui>=1.0.0

[options.extras_require]

[options.entry_points]
invenio_base.apps =
    nr_documents_app = nr_documents_app.ext:NRDocumentsAppExt
invenio_base.api_apps =
    oarepo_ui = nr_documents.ext:NRDocumentsAppExt
invenio_assets.webpack =
    oarepo_ui_theme = nr_documents.theme.webpack:theme


[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401
